docs(dev-portal-web): INFRA-1101 add auth docs

--- a/apps/dev-portal-web/docs/api/external-auth.ru.mdx
+++ b/apps/dev-portal-web/docs/api/external-auth.ru.mdx
@@ -8,7 +8,7 @@ Condo API может встраиваться в сторонние поверх
 На текущий момент платформа Condo позволяет добавить авторизацию через ваш сервис партнёра, используя протокол [Open ID Connect](https://openid.net/developers/how-connect-works/)
 
 
-## Протокол Open ID Connect
+## Авторизация в Condo через OIDC
 
 Чтобы добавить авторизацию в Condo через ваш сервис с использованием OIDC,
 вам необходимо реализовать данный протокол на стороне своего бэкенда, став тем самым провайдером OIDC-авторизации для Condo API.
@@ -22,13 +22,7 @@ Condo API может встраиваться в сторонние поверх
 
 | Название параметра | Описание параметра                                                                                                  | Пример                                    |
 |--------------------|---------------------------------------------------------------------------------------------------------------------|-------------------------------------------|
-| issuer             | Домен вашего бэкенда, являющегося OIDC-провайдером                                                                  | https://server.example.com                |
-| authorizationURL   | API-эндпоинт вашего сервера, который начинает процесс OIDC-авторизации                                              | https://server.example.com/api/oidc/auth  |
-| tokenURL           | API-эндпоинт вашего сервера, который используется для обмена кода авторизации на токен вашего API                   | https://server.example.com/api/oidc/token |
-| userInfoURL        | API-эндпоинт вашего сервера, который по полученному токену будет отдавать информацию о пользователе                 | https://server.example.com/api/oidc/me    |
-| scope              | scope, который необходимо запросить при авторизации, чтобы получить в эндпоинте userInfo всю необходимую информацию | "openid" или "openid user:phone"          |
-| clientID           | Идентификатор OIDC-клиента, который будет использовать Condo  для авторизации в вашем сервисе                       | condo-development                         |
-| clientSecret       | Секрет OIDC-клиента, использующийся Condo для обработки и дешифрования запросов                                     | ********************************          |                                                                                                | https://localhost:3000/auth/condo/callback |
+| userInfoURL        | API-эндпоинт вашего сервера, который по полученному токену будет отдавать информацию о пользователе                 | https://my-app.example.com/api/oidc/me    |
 
 ### Структура userInfo
 
@@ -41,7 +35,7 @@ Condo API может встраиваться в сторонние поверх
 ```json
 {
   "sub": "cmd30383l000q07jy8cqo2zd7",
-  "phone": "+79990001234",
+  "phone_number": "+79990001234",
   "name": "Иван Петров"
 }
 ```
@@ -66,14 +60,88 @@ Condo API может встраиваться в сторонние поверх
 Мы также ожидаем, что передаваемые номер телефона будет в нормализованном формате [E.164](https://ru.wikipedia.org/wiki/E.164) (+7XXXYYYYYYYY)
 </Alert>
 
-## Как происходит авторизация
+## Как работает авторизация через OIDC
 
-После регистрации вас в качестве провайдера авторизации, мы выдадим вам имя вашего провайдера (provider name).
-После чего начать процесс авторизации можно, перейдя на endpoint вида `/api/auth/:providerName?userType=...`.
+После регистрации вас в качестве провайдера авторизации, мы выдадим вам имя провайдера (provider)
+и идентификатор клиента (`client_id`).
+
+После чего начать процесс авторизации можно, перейдя на endpoint вида `/api/auth/:provider?user_type=...&client_id=...&access_token=...`.
 
 <Alert type='info'>
-Для авторизации сотрудников необходимо передать query-параметром `userType=staff`, для авторизации жителей - `userType=resident`
+Для авторизации сотрудников необходимо передать query-параметром `user_type=staff`, для авторизации жителей - `user_type=resident`
 </Alert>
 
-После чего пользователь попадет на страницу авторизации вашего сервиса
+Данный эндпоинт обработает ваш запрос и перенаправит вас (совершив redirect) на `/api/auth/:provider/callback`,
+где будет происходить непосредственная авторизация.
+В случае успешной авторизации, `callback`-эндпоинт перенаправит вас на `/`, выставив заголовок `set-cookie` с параметром `keystone.sid`,
+необходимым для выполнения дальнейших запросов в API.
 
+## Про access_token
+
+Для начала авторизации вы так же должны передать нам OIDC `access_token` от вашего сервиса.
+Он может быть короткоживущим и с минимальными правами доступа. Используя его, Condo API выполнит запрос на предоставленный вами `userInfoURL`
+для получения информации о пользователе.
+
+## Про верификацию телефона
+
+При первой авторизации пользователя, Condo API требует дополнительного подтверждения номера телефона,
+предоставленного вами из `userInfoURL`. В этом случае `/api/auth/:provider/callback` вернёт соответствующую ошибку:
+
+![Пример ответа с ошибкой](/api/auth-confirm-phone-error.png)
+
+Чтобы верифицировать телефон, необходимо выполнить 2 анонимных запроса [Condo GraphQL API](/docs/api/about):
+`startConfirmPhoneAction` для отправки СМС-кода подтверждения на указанный телефон и `completeConfirmPhoneAction`
+для верификации телефона полученным кодом.
+
+После чего необходимо повторить запрос на авторизацию, дополнительно передав параметр `confirm_phone_action_token`,
+полученный из мутации `startConfirmPhoneAction` и подтвержденный в мутации `completeConfirmPhoneAction`
+
+## Пробуем пройти процесс авторизации от и до
+
+Для всех запросов в примере ниже будут использоваться:
+- `test-sdk` - выданный provider name
+- `test-client-id` - выданный `client_id`
+
+Для старта авторизации получаем OIDC-токен вашего сервиса и идем на endpoint `/api/auth/test-sdk?user_type=resident&client_id=test-client-id&access_token=...`,
+после чего получаем редирект на callback:
+
+![Пример ответа с редиректом](/api/auth-sdk-redirect.png)
+
+Переходим на callback и получаем ошибку о том, что необходимо подтвердить телефон:
+
+![Пример ответа с ошибкой](/api/auth-confirm-phone-error.png)
+
+Выполняем GraphQL-запрос `startConfirmPhoneAction` для отправки кода подтверждения и получаем `confirm_phone_action_token`:
+
+![Пример запроса СМС-кода](/api/auth-start-confirm-phone-action.png)
+
+Выполняем GraphQL-запрос `completeConfirmPhoneAction` для подтверждения телефона:
+
+![Пример подтверждения телефона](/api/auth-complete-confirm-phone-action.png)
+
+Повторно переходим на `/api/auth/test-sdk?user_type=resident&client_id=test-client-id&access_token=...&confirm_phone_action_token=cp:18f854bd-8c06-4c98-bdcb-5b01f61ea383`,
+получаем redirect на callback, а затем на `/`
+
+![Пример получения авторизации пользователя в куке keystone.sid](/api/auth-sdk-success-redirect.png)
+
+## Получение токена пользователя из заголовка заголовка set-cookie
+
+В целях безопасности мы передаем авторизационный токен пользователя в виде куки `keystone.sid`.
+Чтобы получить из неё токен, необходимо сначала декодировать значение с помощью [decodeURIComponent](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/decodeURIComponent),
+а затем убрать префикс `s:`. После чего полученный токен можно использовать в качестве Bearer-токена в последующих запросах:
+
+![Пример декодирования значения keystone.sid](/api/auth-decode-auth-cookie.png)
+
+## Особенности браузерной реализации
+
+При реализации данной интеграции в браузерной среде вы можете столкнуться со следующими проблемами:
+ - Политика CORS не позволяет вам выполнить GraphQL-запросы со стороннего домена
+ - Заголовок set-cookie недоступен браузерному клиенту
+
+Для этого мы рекомендуем проксировать GraphQL-эндпоинт `/admin/api`, а также `/api/auth/:provider` и `/api/auth/:provider/callback`
+через ваш бэкенд. Это позволит вам отправлять обойти данные ограничения
+
+<Alert type='warning'>
+У системы Condo API есть дополнительные ограничения на частоту отправки СМС и авторизаций с одного IP.
+Для обхода данных ограничений при использовании прокси-сервера воспользуйтесь гайдом ["Проксирование IP-адресов"](/docs/api/proxying)
+</Alert>
