docs(dev-portal-web): INFRA-1101 translate auth docs

--- a/apps/dev-portal-web/docs/api/external-auth.ru.mdx
+++ b/apps/dev-portal-web/docs/api/external-auth.ru.mdx
@@ -1,11 +1,8 @@
 Condo API может встраиваться в сторонние поверхности и использоваться в качестве бэкенда
 в мобильных, веб- и десктопных приложениях.
-Для таких интеграций часто требуется уметь авторизовывать пользователей партнёра в Condo API.
+Для таких интеграций часто требуется уметь авторизовываться в Condo API через внешний сервис партнёра.
 
-Мы используем [Passport.js](https://www.passportjs.org) — популярную библиотеку для Node.js,
-позволяющую легко подключать различные механизмы авторизации.
-
-На текущий момент платформа Condo позволяет добавить авторизацию через ваш сервис партнёра, используя протокол [Open ID Connect](https://openid.net/developers/how-connect-works/)
+На текущий момент платформа Condo позволяет добавить данную авторизацию, используя протокол [Open ID Connect](https://openid.net/developers/how-connect-works/)
 
 
 ## Авторизация в Condo через OIDC
@@ -24,12 +21,35 @@ Condo API может встраиваться в сторонние поверх
 |--------------------|---------------------------------------------------------------------------------------------------------------------|-------------------------------------------|
 | userInfoURL        | API-эндпоинт вашего сервера, который по полученному токену будет отдавать информацию о пользователе                 | https://my-app.example.com/api/oidc/me    |
 
-### Структура userInfo
+## Как работает авторизация через OIDC
+
+После регистрации вас в качестве провайдера авторизации, мы выдадим вам имя провайдера (`provider`),
+использующееся в эндпоинтах авторизации и идентификатор клиента (`client_id`).
+
+После чего начать процесс авторизации можно, перейдя на endpoint вида **/api/auth/:provider?user_type=...&client_id=...&access_token=...**
+
+<Alert type='info'>
+Для авторизации сотрудников управляющих организаций необходимо передать query-параметром `user_type=staff`, для авторизации жителей - `user_type=resident`
+</Alert>
+
+Данный эндпоинт обработает ваш запрос и перенаправит вас (совершив redirect) на **/api/auth/:provider/callback**,
+где будет происходить непосредственная авторизация.
+В случае успешной авторизации, **callback-эндпоинт** перенаправит вас на **/**, выставив заголовок `set-cookie` с параметром `keystone.sid`,
+необходимым для выполнения дальнейших запросов в API.
+
+## Про access_token
+
+Для начала авторизации помимо `client_id` и `user_type`, вы должны передать нам OIDC `access_token` от вашего сервиса.
+Используя его, Condo API выполнит запрос на предоставленный вами `userInfoURL` для получения информации о пользователе.
+Данный токен выписывается вашим сервисом непосредственно перед авторизацией.
+Он может быть короткоживущим и с минимальными правами доступа, необходимыми для получения информации о текущем пользователе.
+
+## Структура userInfo
 
 Особое внимание стоит обратить на эндпоинт `userInfoURL`,
 так как именно он отвечает за создание и синхронизацию пользователей в платформе Condo с сервисом партнёра.
 
-В минимальном варианте для корректной привязки пользователя `userInfo` должен возвращать **идентификатор пользователя** в вашем сервисе и его **номер телефона** или **email**.
+В минимальном варианте для корректной привязки пользователя `userInfo` должен возвращать **идентификатор пользователя** в вашем сервисе и его **номер телефона**.
 Имя пользователя - необязательный атрибут в платформе Condo, однако мы настоятельно советуем передавать его дополнительно при наличии.
 
 ```json
@@ -60,49 +80,33 @@ Condo API может встраиваться в сторонние поверх
 Мы также ожидаем, что передаваемые номер телефона будет в нормализованном формате [E.164](https://ru.wikipedia.org/wiki/E.164) (+7XXXYYYYYYYY)
 </Alert>
 
-## Как работает авторизация через OIDC
-
-После регистрации вас в качестве провайдера авторизации, мы выдадим вам имя провайдера (provider)
-и идентификатор клиента (`client_id`).
-
-После чего начать процесс авторизации можно, перейдя на endpoint вида `/api/auth/:provider?user_type=...&client_id=...&access_token=...`.
-
 <Alert type='info'>
-Для авторизации сотрудников необходимо передать query-параметром `user_type=staff`, для авторизации жителей - `user_type=resident`
+В примерах выше названия полей соответствуют общепринятым правилам именования полей в OIDC,
+однако если у вас уже есть готовый механизм OIDC (или аналогичный механизм, возвращающий информацию о пользователе по токену),
+в котором данные поля присутствуют в другом виде, то мы дополнительно можем сконфигурировать ремаппинг ваших полей в указанные выше
 </Alert>
-
-Данный эндпоинт обработает ваш запрос и перенаправит вас (совершив redirect) на `/api/auth/:provider/callback`,
-где будет происходить непосредственная авторизация.
-В случае успешной авторизации, `callback`-эндпоинт перенаправит вас на `/`, выставив заголовок `set-cookie` с параметром `keystone.sid`,
-необходимым для выполнения дальнейших запросов в API.
-
-## Про access_token
-
-Для начала авторизации вы так же должны передать нам OIDC `access_token` от вашего сервиса.
-Он может быть короткоживущим и с минимальными правами доступа. Используя его, Condo API выполнит запрос на предоставленный вами `userInfoURL`
-для получения информации о пользователе.
 
 ## Про верификацию телефона
 
-При первой авторизации пользователя, Condo API требует дополнительного подтверждения номера телефона,
+При первой авторизации пользователя, Condo API потребует дополнительного подтверждения номера телефона,
 предоставленного вами из `userInfoURL`. В этом случае `/api/auth/:provider/callback` вернёт соответствующую ошибку:
 
 ![Пример ответа с ошибкой](/api/auth-confirm-phone-error.png)
 
-Чтобы верифицировать телефон, необходимо выполнить 2 анонимных запроса [Condo GraphQL API](/docs/api/about):
+Чтобы верифицировать телефон, необходимо выполнить 2 анонимных GraphQL-запроса в [Condo GraphQL API](/docs/api/about):
 `startConfirmPhoneAction` для отправки СМС-кода подтверждения на указанный телефон и `completeConfirmPhoneAction`
 для верификации телефона полученным кодом.
 
 После чего необходимо повторить запрос на авторизацию, дополнительно передав параметр `confirm_phone_action_token`,
 полученный из мутации `startConfirmPhoneAction` и подтвержденный в мутации `completeConfirmPhoneAction`
 
-## Пробуем пройти процесс авторизации от и до
+## Пробуем пройти процесс авторизации "от и до"
 
 Для всех запросов в примере ниже будут использоваться:
 - `test-sdk` - выданный provider name
 - `test-client-id` - выданный `client_id`
 
-Для старта авторизации получаем OIDC-токен вашего сервиса и идем на endpoint `/api/auth/test-sdk?user_type=resident&client_id=test-client-id&access_token=...`,
+Для старта авторизации получаем OIDC-токен вашего сервиса и идем на endpoint **/api/auth/test-sdk?user_type=resident&client_id=test-client-id&access_token=...**,
 после чего получаем редирект на callback:
 
 ![Пример ответа с редиректом](/api/auth-sdk-redirect.png)
@@ -119,14 +123,14 @@ Condo API может встраиваться в сторонние поверх
 
 ![Пример подтверждения телефона](/api/auth-complete-confirm-phone-action.png)
 
-Повторно переходим на `/api/auth/test-sdk?user_type=resident&client_id=test-client-id&access_token=...&confirm_phone_action_token=cp:18f854bd-8c06-4c98-bdcb-5b01f61ea383`,
-получаем redirect на callback, а затем на `/`
+Повторно переходим на **/api/auth/test-sdk?user_type=resident&client_id=test-client-id&access_token=...&confirm_phone_action_token=cp:18f854bd-8c06-4c98-bdcb-5b01f61ea383**,
+получаем redirect на callback, а затем на **/**.
 
 ![Пример получения авторизации пользователя в куке keystone.sid](/api/auth-sdk-success-redirect.png)
 
 ## Получение токена пользователя из заголовка заголовка set-cookie
 
-В целях безопасности мы передаем авторизационный токен пользователя в виде куки `keystone.sid`.
+В целях безопасности мы передаем авторизационный токен пользователя не в открытом виде, а в виде куки `keystone.sid`.
 Чтобы получить из неё токен, необходимо сначала декодировать значение с помощью [decodeURIComponent](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/decodeURIComponent),
 а затем убрать префикс `s:`. После чего полученный токен можно использовать в качестве Bearer-токена в последующих запросах:
 
@@ -135,13 +139,13 @@ Condo API может встраиваться в сторонние поверх
 ## Особенности браузерной реализации
 
 При реализации данной интеграции в браузерной среде вы можете столкнуться со следующими проблемами:
- - Политика CORS не позволяет вам выполнить GraphQL-запросы со стороннего домена
- - Заголовок set-cookie недоступен браузерному клиенту
+ - Политика CORS не позволяет вам выполнить GraphQL-запросы со стороннего домена;
+ - Заголовок `set-cookie` недоступен браузерному клиенту.
 
-Для этого мы рекомендуем проксировать GraphQL-эндпоинт `/admin/api`, а также `/api/auth/:provider` и `/api/auth/:provider/callback`
-через ваш бэкенд. Это позволит вам отправлять обойти данные ограничения
+Для этого мы рекомендуем проксировать GraphQL-эндпоинт `/admin/api`, а также полученные вами `/api/auth/:provider` и `/api/auth/:provider/callback`
+через ваш бэкенд. Это позволит вам обойти данные ограничения
 
 <Alert type='warning'>
-У системы Condo API есть дополнительные ограничения на частоту отправки СМС и авторизаций с одного IP.
+У Condo API есть дополнительные ограничения на частоту отправки СМС и авторизаций с одного IP адреса.
 Для обхода данных ограничений при использовании прокси-сервера воспользуйтесь гайдом ["Проксирование IP-адресов"](/docs/api/proxying)
 </Alert>
