--- a/apps/dev-portal-web/docs/api/external-auth.ru.mdx
+++ b/apps/dev-portal-web/docs/api/external-auth.ru.mdx
@@ -1,8 +1,8 @@
 Condo API может встраиваться в сторонние поверхности и использоваться в качестве бэкенда
-в мобильных, веб- и десктопных приложениях.
+в мобильных, веб и десктопных приложениях.
 Для таких интеграций часто требуется уметь авторизовываться в Condo API через внешний сервис партнёра.
 
-На текущий момент платформа Condo позволяет добавить данную авторизацию, используя протокол [Open ID Connect](https://openid.net/developers/how-connect-works/)
+Condo позволяет добавить данную авторизацию, используя протокол [Open ID Connect](https://openid.net/developers/how-connect-works/)
 
 
 ## Авторизация в Condo через OIDC
@@ -15,7 +15,7 @@ Condo API может встраиваться в сторонние поверх
 использовать [одну из сертифицированных библиотек](https://openid.net/developers/certified-openid-connect-implementations/) (раздел Certified OpenID Provider Libraries)
 </Alert>
 
-После чего необходимо передать нам следующий набор параметров:
+После чего необходимо передать команде Condo следующий набор параметров:
 
 | Название параметра | Описание параметра                                                                                                  | Пример                                    |
 |--------------------|---------------------------------------------------------------------------------------------------------------------|-------------------------------------------|
@@ -49,8 +49,8 @@ Condo API может встраиваться в сторонние поверх
 Особое внимание стоит обратить на эндпоинт `userInfoURL`,
 так как именно он отвечает за создание и синхронизацию пользователей в платформе Condo с сервисом партнёра.
 
-В минимальном варианте для корректной привязки пользователя `userInfo` должен возвращать **идентификатор пользователя** в вашем сервисе и его **номер телефона**.
-Имя пользователя - необязательный атрибут в платформе Condo, однако мы настоятельно советуем передавать его дополнительно при наличии.
+В минимальном варианте для корректной привязки пользователя `userInfo` должен возвращать **идентификатор пользователя** в вашем сервисе,
+его **номер телефона** и **имя пользователя**. Email может быть указан дополнительно при наличии.
 
 ```json
 {
@@ -77,7 +77,7 @@ Condo API может встраиваться в сторонние поверх
 ```
 
 <Alert type='info'>
-Мы также ожидаем, что передаваемые номер телефона будет в нормализованном формате [E.164](https://ru.wikipedia.org/wiki/E.164) (+7XXXYYYYYYYY)
+Номер телефона нужно передавать в нормализованном формате [E.164](https://ru.wikipedia.org/wiki/E.164) (+7XXXYYYYYYYY)
 </Alert>
 
 <Alert type='info'>
@@ -142,10 +142,10 @@ Condo API может встраиваться в сторонние поверх
  - Политика CORS не позволяет вам выполнить GraphQL-запросы со стороннего домена;
  - Заголовок `set-cookie` недоступен браузерному клиенту.
 
-Для этого мы рекомендуем проксировать GraphQL-эндпоинт `/admin/api`, а также полученные вами `/api/auth/:provider` и `/api/auth/:provider/callback`
-через ваш бэкенд. Это позволит вам обойти данные ограничения
+Для их решения рекомендуется проксировать GraphQL-эндпоинт `/admin/api`, а также полученные вами `/api/auth/:provider` и `/api/auth/:provider/callback`
+через ваш бэкенд.
 
 <Alert type='warning'>
-У Condo API есть дополнительные ограничения на частоту отправки СМС и авторизаций с одного IP адреса.
+У Condo API есть дополнительные ограничения на частоту отправки СМС и авторизаций с одного IP адреса (не более 10 в час).
 Для обхода данных ограничений при использовании прокси-сервера воспользуйтесь гайдом ["Проксирование IP-адресов"](/docs/api/proxying)
 </Alert>
